--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
- body {
-    font-family: Arial, Helvetica, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Syne&display=swap');
+ 
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
+body {
+    font-family: Abel, Syne, sans-serif;
+    font-weight: 400;
  }
