--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,8 @@ body {
   font-family: Abel, Syne, sans-serif;
   font-weight: 400;
   color: #ffffff;
-  background-color: #383838;
+  background-color: #292929;
+  /* background-color: #383838; */
   padding: 20px;
 }
 
@@ -131,14 +132,13 @@ h1, h2 {
   outline: 1px solid #858585;
   border-radius: 5px;
   font-size: large;
-  background-color: rgba(68, 62, 32, 0.349);
+  background-color: rgba(70, 59, 1, 0.349);
   flex: 34%;
   padding: 10px;
 }
 
 #quote1 li {
   text-align: left;
-  /* font-style:italic; */
   font-size: medium;
   list-style: none;
 }
@@ -150,7 +150,7 @@ h1, h2 {
   outline: 1px solid #858585;
   border-radius: 5px;
   font-size: large;
-  background-color: rgba(68, 62, 32, 0.349);
+  background-color: rgba(70, 59, 1, 0.349);
   flex: 34%;
   padding: 10px;
 }
@@ -159,7 +159,6 @@ h1, h2 {
 margin: 20px 0 0 0;
 height: 600px;
 width: 300px;
-/* padding: 10px; */
 border-style: solid;
 border-color: #858585;
 border-width: 1px;
@@ -172,8 +171,6 @@ flex: 25%;
   background: url('../images/profile2.jpg') no-repeat center center;
   background-size: cover;
   border-radius: 5px;
-  /* object-fit: fill; */
-  
 }
 
 /* responsive design styling */
@@ -247,4 +244,39 @@ footer {
 #pictures > img {
   width: 100%;
   margin-top: 3px;
+}
+
+/* contact form */
+
+#form {
+  background: url(../images/BGContact.jpg) no-repeat center center;
+  background-position: center;
+  background-size: cover;
+  height: 1200px;
+  width: 700px;
+  margin: 50px auto;
+  clear: both;
+  text-align: center;
+}
+
+.contact-form {
+  background-color: rgba(70, 59, 1, 0.301);
+  max-width: 700px;
+  padding: 20px;
+  left: 15%;
+  letter-spacing: 2px;
+  text-align: left;
+}
+
+.contact-form #title {
+  letter-spacing: 4px;
+  border-bottom: 1px solid #dadada;
+  display: inline-block;
+  padding-bottom: 10px;
+  margin-bottom: 25px;
+  text-align: center;
+}
+
+.contact-form label {
+  text-transform: uppercase;
 }
