--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,6 @@ body {
   font-weight: 400;
   color: #ffffff;
   background-color: #292929;
-  /* background-color: #383838; */
   padding: 20px;
 }
 
@@ -54,6 +53,7 @@ h1, h2 {
   margin-left: 120px;
   margin-right: 200px;
   color: rgb(209, 36, 6);
+  transition: all 0.2s ease-in-out;
 }
 
 #navi, #mask {
@@ -64,17 +64,20 @@ h1, h2 {
   font-weight: bold;
 }
 
-#mask {
+#mask:hover {
+  color: gold;
+}
+
+#mask2 {
+  color: rgb(209, 36, 6);
   transition: all 0.2s ease-in-out;
 }
 
-#mask:hover {
+#mask2:hover {
   color: gold;
-  
 }
 
 .active {
-  color: gold;
   font-weight: bold;
 }
 
@@ -88,29 +91,25 @@ h1, h2 {
   font-style: italic;
 }
 
-#name {
+#name h1 {
   color: #ffffff;
+}
+
+#name {
   font-size: 3vw;
   letter-spacing: 2px;
   text-align: center;
   line-height: 200px;
-  /* margin-left: 10%;
-  margin-top: 65px; */
 
   width: 80%;
   height: 300px;
-  outline: 1px solid #dadada;
+  outline: 1px solid #858585;
   border-radius: 5px;
 
-  background-color: rgba(212, 181, 0, 0.404);
+  background-color: rgba(59, 50, 1, 0.397);
   display: inline-table;
   margin: 2em auto;
-
 }
-
-/* #home-outer {
-  padding: ;
-} */
 
 #home-image {
   width: 100%;
@@ -180,13 +179,7 @@ flex: 25%;
   border-radius: 5px;
 }
 
-/* responsive design styling */
-
-@media (max-width: 800px) {
-  #portrait, #quote1, #quote2, #portrait-container { flex: 100%; }
-  #name {font-size: 6vw;}
-}
-
+/* bottom part with tnb link  */
 
 #tnb {
   width: 100%;
@@ -214,6 +207,15 @@ flex: 25%;
   border: 2px solid #dadada;
   border-top: none;
   box-sizing: content-box;
+}
+
+#tnb-icon {
+  color: rgb(209, 36, 6);
+  transition: all 0.2s ease-in-out;
+}
+
+#tnb-icon:hover {
+  color: gold;
 }
 
 /* social media links */
@@ -255,33 +257,79 @@ footer {
 
 #form {
   background: url(../images/bg.contact.jpg) no-repeat center center;
-  background-position: center;
   background-size: cover;
-  height: 1200px;
-  width: 700px;
+  height: 900px;
+  width: 60%;
   margin: 50px auto;
   clear: both;
-  text-align: center;
+  margin-bottom: 25px;
 }
 
-.contact-form {
+/* .contact-form {
   background-color: rgba(70, 59, 1, 0.301);
-  max-width: 700px;
-  padding: 20px;
+  width: inherit;
+  padding: 200px;
   left: 15%;
   letter-spacing: 2px;
   text-align: left;
+  margin: 1em auto;
+} */
+
+.text-input {
+  background: transparent;
+  width: 50%;
+  height: 30px;
+  margin: 5px 0 20px 0;
+  border: 1px solid #858585;
+  border-radius: 4px;
+  color: #fafafa;
 }
 
-.contact-form #title {
+form #title {
+  line-height: 75px;
   letter-spacing: 4px;
   border-bottom: 1px solid #dadada;
-  display: inline-block;
-  padding-bottom: 10px;
-  margin-bottom: 25px;
+  padding-bottom: 5px;
+  margin-bottom: 35px;
   text-align: center;
 }
 
-.contact-form label {
+form #full-name, #email, #message {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 25px;
+  outline: 0;
+}
+
+#message {
+  padding: 12px 16px;
+  width: 600px;
+  height: 200px;
+}
+
+form .action {
+  margin-bottom: 75px;
+  background: transparent;
+  border-radius: 4px;
+  border: 1px solid #858585;
+  cursor: pointer;
   text-transform: uppercase;
+  color: #dadada;
+  padding: 10px;
+  font-weight: bold;
+}
+
+form label {
+  text-transform: uppercase;
+}
+
+#reset {
+  float: right;
+}
+
+/* responsive design styling */
+
+@media (max-width: 800px) {
+  #portrait, #quote1, #quote2, #portrait-container { flex: 100%; }
+  #name {font-size: 6vw;}
 }
