--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,22 +258,24 @@ footer {
 #form {
   background: url(../images/bg.contact.jpg) no-repeat center center;
   background-size: cover;
-  height: 900px;
-  width: 60%;
-  margin: 50px auto;
+  height: 1200px;
+  width: 50%;
+  margin: 75px auto;
   clear: both;
   margin-bottom: 25px;
 }
 
-/* .contact-form {
+.contact-form {
   background-color: rgba(70, 59, 1, 0.301);
   width: inherit;
-  padding: 200px;
-  left: 15%;
+  border: 1px solid #858585;
+  border-radius: 4px;
+  padding: 20px;
   letter-spacing: 2px;
-  text-align: left;
-  margin: 1em auto;
-} */
+  /* position: absolute; */
+  display: inline-table;
+  margin: 150px 11% 0; 
+}
 
 .text-input {
   background: transparent;
@@ -282,7 +284,8 @@ footer {
   margin: 5px 0 20px 0;
   border: 1px solid #858585;
   border-radius: 4px;
-  color: #fafafa;
+  font-size: 15px;
+  color: #dadada;
 }
 
 form #title {
@@ -302,14 +305,16 @@ form #full-name, #email, #message {
 }
 
 #message {
-  padding: 12px 16px;
-  width: 600px;
+  padding: 15px 140px;
+  /* width: inherit; */
+  max-width: fit-content;
   height: 200px;
+  color: #dadada;
 }
 
 form .action {
   margin-bottom: 75px;
-  background: transparent;
+  background: rgb(209, 36, 6);
   border-radius: 4px;
   border: 1px solid #858585;
   cursor: pointer;
@@ -317,6 +322,12 @@ form .action {
   color: #dadada;
   padding: 10px;
   font-weight: bold;
+  transition: all 0.2s ease-in-out;
+}
+
+.action:hover {
+  background: gold;
+  color: #292929;
 }
 
 form label {
@@ -330,6 +341,19 @@ form label {
 /* responsive design styling */
 
 @media (max-width: 800px) {
-  #portrait, #quote1, #quote2, #portrait-container { flex: 100%; }
+  #portrait, #quote1, #quote2, #portrait-container, #form { flex: 100%; }
   #name {font-size: 6vw;}
+  #navi {
+    margin-left: 5px; 
+    line-height: 25px;
+    flex-direction: row-reverse;
+}
+
+#navi li {
+  margin-right: 25px;
+}
+  #mask {
+    margin-left: 30px;
+    margin-right: 50px;
+  }
 }
