--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
   font-weight: 400;
   color: #ffffff;
   background-color: #292929;
-  padding: 20px;
+  padding: 15px;
 }
 
 /* Navigation & Headings */
@@ -86,7 +86,6 @@ h1, h2 {
 #name p {
   font-size: large;
   letter-spacing: 2px;
-  text-align: top;
   color: #ffffff;
   font-style: italic;
 }
@@ -148,6 +147,8 @@ h1, h2 {
   text-align: left;
   font-size: medium;
   list-style: none;
+  list-style-position: inside;
+  padding: 5px;
 }
 
 #quote2 {
@@ -160,7 +161,7 @@ h1, h2 {
   background-color: rgba(70, 59, 1, 0.349);
   flex: 34%;
   padding: 10px;
-  padding-top: 7%;
+  padding-top: 3%;
 }
 
 #portrait-container {
@@ -202,9 +203,9 @@ flex: 25%;
 #tnb h2 {
   text-align: center;
   background-color: rgba(70, 59, 1, 0.301);
-  width: 20%;
+  width: 40%;
   height: inherit;
-  margin-left: 40%;
+  margin-left: 30%;
   padding: 90px 0 0 0;
   border: 2px solid #dadada;
   border-top: none;
